<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="4dp"
    style="@style/CardMainStyle">
    <LinearLayout
        style="@style/CardMainLayoutStyle">
        <LinearLayout
            style="@style/CardHeadLayoutStyle">
            <TextView
                style="@style/CardQuestionStyle"
                android:text="@string/question5"
                android:onClick="question5"/>
            <ImageView
                android:id="@+id/btn_question_5"
                style="@style/CardQuestionButtonStyle"
                android:onClick="question5"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />
        </LinearLayout>
        <LinearLayout
            style="@style/CardBodyStyle"
            android:id="@+id/body_question_5">
            <RadioGroup
                style="@style/CardAnswerRadioStyle">
                <RadioButton
                    android:id="@+id/radio_q5_2points"
                    style="@style/CardAnswerRadioStyle"
                    android:text="@string/answer2points"
                    android:onClick="radioButtonClickedQ5"/>
                <RadioButton
                    android:id="@+id/radio_q5_3points"
                    style="@style/CardAnswerRadioStyle"
                    android:text="@string/answer3points"
                    android:onClick="radioButtonClickedQ5"/>
                <RadioButton
                    android:id="@+id/radio_q5_4points"
                    style="@style/CardAnswerRadioStyle"
                    android:text="@string/answer4points"
                    android:onClick="radioButtonClickedQ5"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>