<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="4dp"
    style="@style/CardMainStyle">
    <LinearLayout
        style="@style/CardMainLayoutStyle">
        <LinearLayout
            style="@style/CardHeadLayoutStyle">
            <TextView
                style="@style/CardQuestionStyle"
                android:text="@string/question8" />
            <ImageView
                android:id="@+id/btn_question_8"
                style="@style/CardQuestionButtonStyle"
                android:onClick="question8"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />
        </LinearLayout>
        <LinearLayout
            style="@style/CardBodyStyle"
            android:id="@+id/body_question_8"
            >
            <CheckBox
                android:id="@+id/checkbox_q8_1"
                style="@style/CardAnswerCheckStyle"
                android:text="@string/answer1q8"
                android:onClick="checkBoxClickedQ8"
               />
            <CheckBox
                android:id="@+id/checkbox_q8_2"
                style="@style/CardAnswerCheckStyle"
                android:text="@string/answer2q8"
                android:onClick="checkBoxClickedQ8"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>